example-microbit-controller/deploy/020-deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: quarkus-mqtt-integration-example
  labels:
    deployment: quarkus-mqtt-integration-example

spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: quarkus-mqtt-integration-example
  template:
    metadata:
      labels:
        deployment: quarkus-mqtt-integration-example
    spec:
      containers:
        - name: service
          image: ghcr.io/drogue-iot/quarkus-mqtt-integration-example-native:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              port: 8080
              path: /health/live
          readinessProbe:
            httpGet:
              port: 8080
              path: /health/ready
